# qr-generator-encription

./: README.md  pyproject.toml
src/qr_cli/: main.py  server.py  utils.py
tests/: test_cli.py  test_server.py  test_utils.py
